--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animejs": "^3.2.1",
+    "autoprefixer": "^10.4.14",
     "bootstrap": "^5.3.0",
-    "framer-motion": "latest",
+    "framer-motion": "^10.13.0",
+    "kursor": "^0.1.6",
     "node": "^20.4.0",
+    "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "sass": "^1.64.0",
@@ -45,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "tailwindcss": "^3.3.3"
   }
 }
