--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,7 +16,6 @@
     "autoprefixer": "^10.4.14",
     "bootstrap": "^5.3.0",
     "framer-motion": "^10.13.0",
-    "kursor": "^0.1.6",
     "node": "^20.4.0",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
