--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/react": "^5.0.0-alpha.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
@@ -19,11 +20,13 @@
     "node": "^20.4.0",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
+    "react-carousel3": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "sass": "^1.64.0",
+    "styled-components": "^6.0.5",
     "typed.js": "latest",
     "web-vitals": "^2.1.4"
   },
