--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-scroll-parallax": "^3.4.2",
     "sass": "^1.64.0",
     "styled-components": "^6.0.5",
     "typed.js": "latest",
