--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "animejs": "^3.2.1",
     "autoprefixer": "^10.4.14",
     "bootstrap": "^5.3.0",
-    "framer-motion": "^10.13.0",
+    "framer-motion": "^10.13.1",
     "node": "^20.4.0",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-carousel3": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.4.2",
