--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Lamboserker.github.io/myProfile",
+  "homepage": "https://lamboserker.github.io/myProfile",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
